Trial 2: Optimizing For Fast User Resp